RESOLVED FIXED105772
[Mac] MemoryPressureHandler: Occasional crashes in uninstall() when responding to memory pressure signal.
https://bugs.webkit.org/show_bug.cgi?id=105772
Summary [Mac] MemoryPressureHandler: Occasional crashes in uninstall() when respondin...
Andreas Kling
Reported 2012-12-26 10:52:06 PST
I've seen a few null derefs in MemoryPressureHandler::uninstall() after sending synthetic memory pressure signals to WebKit. Looks like a race.
Attachments
Patch (2.03 KB, patch)
2012-12-26 11:01 PST, Andreas Kling
slewis: review+
Andreas Kling
Comment 1 2012-12-26 11:01:32 PST
Stephanie Lewis
Comment 2 2012-12-26 11:16:57 PST
Comment on attachment 180757 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=180757&action=review > Source/WebCore/platform/mac/MemoryPressureHandlerMac.mm:89 > + dispatch_source_cancel(_cache_event_source); It might be a good idea to check if _cache_event_source is not null.
Andreas Kling
Comment 3 2012-12-26 12:14:44 PST
David Kilzer (:ddkilzer)
Comment 4 2012-12-28 18:17:11 PST
Note You need to log in before you can comment on or make changes to this bug.