[Mac] MemoryPressureHandler: Occasional crashes in uninstall() when responding to memory pressure signal. <http://webkit.org/b/105772>

Reviewed by Stephanie Lewis.

We can't synchronously dereference _cache_event_source in uninstall() just because m_installed
is true -- the block that initializes _cache_event_source is asynchronous and may not have executed.
Fix this by performing the uninstallation asynchronously on the main queue as well.

* platform/mac/MemoryPressureHandlerMac.mm:
(WebCore::MemoryPressureHandler::uninstall):

Canonical link: https://commits.webkit.org/123966@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138482 268f45cc-cd09-0410-ab3c-d52691b4dbfc